Update videos and README

--- a/BayesianBilliardsVideo.ipynb
+++ b/BayesianBilliardsVideo.ipynb
@@ -2,6 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "ce2224aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy version: 1.24.4\n",
+      "Matplotlib version: 3.4.3\n",
+      "SciPy version: 1.9.1\n",
+      "OpenCV version: 4.8.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib\n",
+    "import scipy\n",
+    "import os\n",
+    "import cv2\n",
+    "\n",
+    "# Print the versions of the libraries\n",
+    "print(\"NumPy version:\", np.__version__)\n",
+    "print(\"Matplotlib version:\", matplotlib.__version__)\n",
+    "print(\"SciPy version:\", scipy.__version__)\n",
+    "print(\"OpenCV version:\", cv2.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "18d0fa8f",
    "metadata": {},
@@ -146,6 +177,8 @@
     }
    ],
    "source": [
+    "# Epsilon Version - Video Generator\n",
+    "\n",
     "import cv2\n",
     "import os\n",
     "\n",
